--- a/app/src/main/res/layout/text_content.xml
+++ b/app/src/main/res/layout/text_content.xml
@@ -23,7 +23,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="100dp"
-                android:background="@drawable/side_nav_bar"
+                android:background="@color/white"
                 android:orientation="horizontal">
 
                 <ImageView
@@ -31,8 +31,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:src="@drawable/distr"
-                    />
+                    android:src="@drawable/distr" />
             </LinearLayout>
 
             <TextView
@@ -46,7 +45,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="100dp"
                 android:layout_marginTop="10dp"
-                android:background="@drawable/side_nav_bar"
+                android:background="@color/white"
                 android:orientation="horizontal"></LinearLayout>
 
         </LinearLayout>
