--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -33,5 +33,11 @@
         <item>Большой улов</item>
     </string-array>
 
+    <string-array name="mine_text_size_array">
+        <item>Большой</item>
+        <item>Средний</item>
+        <item>Маленький</item>
+    </string-array>
+
 
 </resources>
